Fixed store page product card contents overflowing

--- a/src/Styles/Store.css
+++ b/src/Styles/Store.css
@@ -32,6 +32,7 @@
     overflow: hidden;
     transition: 0.3s;
 }
+
 #storefilter>div>div {
     display: flex;
     flex-direction: column;
@@ -70,20 +71,33 @@
     border-color: var(--accentColor);
 }
 
+#storecards>div>h3 {
+    position: absolute;
+    top: 5px;
+    padding:2px;
+}
+
 #storecards>div>img {
     max-width: 160px;
     max-height: 180px;
 }
 
-#storecards>div>div {
+#storecards>div>div:last-child {
+    position: absolute;
+    bottom: 5px;
     display: flex;
     width: 100%;
     justify-content: space-around;
     font-weight: bold;
 }
+
 #storecards>div>#discountTag {
-  top: 10px;
-  right: -90px;
+    top: 5px;
+    right: -100px;
+    width: 100%;
+    justify-content: space-around;
+    font-weight: bold;
+    z-index: 1;
 }
 
 @media (max-width: 1000px) {
@@ -106,7 +120,7 @@
         justify-content: space-around;
     }
 
-    #storefilter>div>div{
+    #storefilter>div>div {
         max-width: 150px;
         border: none;
 
